# nepes-palette

./: README.org  palette.toml  pyproject.toml
captures/samples/: showcase.diff  showcase.md  showcase.py  showcase.sh
docs/: chart-palette-validated.md
docs/superpowers/plans/: 2026-03-17-chart-palette-impl.md
docs/superpowers/specs/: 2026-03-17-chart-palette-design.md
src/nepes_palette/: cli.py  colors.py  harmony.py  palette.py  palette_data.py  swatch.py  validate.py
src/nepes_palette/capture/: runner.py
src/nepes_palette/capture/tapes/: __init__.py  bat.py  cmux.py  delta.py  emacs.py  fish.py  fzf.py  gitui.py  kitty.py  lazygit.py  lsd.py  nvim.py  starship.py  tmux.py  wezterm.py  yazi.py
src/nepes_palette/generators/: __init__.py  bat.py  chrome.py  claude_code.py  cmux.py  css.py  delta.py  emacs.py  fish.py  fzf.py  gitui.py  kitty.py  lazygit.py  lsd.py  mplstyle.py  nvim.py  raycast.py  readme.py  safari.py  slack.py  vhs.py  yazi.py
tests/: test_capture.py  test_capture_cli.py  test_cli.py  test_colors.py  test_generators.py  test_harmony.py  test_integration.py  test_palette.py  test_readme.py  test_swatch.py  test_tapes.py  test_validate.py
